fix spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 :host {
-  padding: 16px;
+  padding: 32px 16px 0;
   display: flex;
   flex-direction: column;
   gap: 16px;
